--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+#board {
+    border-spacing: 0;
+}
 .cell {
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     border: 1px solid black;
 }
