--- a/style.css
+++ b/style.css
@@ -1,22 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-#board {
-    border-spacing: 0;
-}
-.cell {
-    width: 20px;
-    height: 20px;
+td {
     border: 1px solid black;
+    height: 10px;
+    width: 10px;
+}
+table {
+    border-spacing: 0;
 }
 .red {
     background-color: red;
-}
-.blue {
-    background-color: blue;
-}
-.green {
-    background-color: green;
 }
