demo 5 code, check for piece below, random colors

--- a/style.css
+++ b/style.css
@@ -9,3 +9,15 @@ table {
 .red {
     background-color: red;
 }
+.purple {
+    background-color: purple;
+}
+.yellow {
+    background-color: yellow;
+}
+.green {
+    background-color: green;
+}
+.orange {
+    background-color: orange;
+}
