--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ table {
     background-color: purple;
 }
 .yellow {
-    background-color: yellow;
+    background-color: rgb(144, 144, 4);
 }
 .green {
     background-color: green;
